# rl-debug-bench

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
base/: requirements.txt
bugs/: registry.yaml
bugs/patches/: dead_surrogate_v1.diff
calibration/: baselines.json  build_baselines.py
harness/: container.py  episode.py  metrics.py  models.py  render.py  tools.py
scoring/: integrity.py  localization.py  outcome.py  score_episode.py
tests/: test_determinism.py  test_harness.py  test_integrity.py  test_patches_apply.py  test_scoring.py
